Remove compile args option (run only in java 12)